--- a/src/app/components/client-pages/footer/footer.component.html
+++ b/src/app/components/client-pages/footer/footer.component.html
@@ -47,8 +47,8 @@ FAQ</a></p>
         </div>
         <div class="pt-[10px] leading-8">
             <p><a routerLink="">Tòa nhà FPT Polytechnic, P. Trịnh Văn Bô, Xuân Phương, Nam Từ Liêm, Hà Nội</a></p>
-            <p><a routerLink="">Phone :+566 477 256, +566 254 575</a></p>
-            <p><a routerLink="">Email : Thetam1998@gmail.com</a></p>
+            <p><a routerLink="">Phone :+566 477 256</a></p>
+            <p><a routerLink="">Email : vand@fpt.edu.vn</a></p>
 
         </div>
     </div>
