--- a/src/app/pages/client-pase/homepages/homepages.component.html
+++ b/src/app/pages/client-pase/homepages/homepages.component.html
@@ -3,7 +3,7 @@
         <div>
             <app-advise></app-advise>
         </div>
-        <div class="banner bg-[white] w-[1000px] scroll-mb-[10px]">
+        <div class="banner bg-[white] w-[1200px] scroll-mb-[10px]">
             <app-banner-slideshow></app-banner-slideshow>
         </div>
     </div>
@@ -12,7 +12,7 @@
         <div class="mx-[120px] grid grid-cols-3 gap-6 overflow-hidden relative  my-[20px]">
             <div class="grid grid-cols-2 border-solid border-2 border-[#ec5959] rounded-lg px-[30px] py-[10px] ">
                 <div>
-                    <img src="https://FAHASA.rslahmed.com/assets/images/svg/delivery-van.svg" alt="" class="m-auto">
+                    <img src="https://rafcart.rslahmed.com/assets/images/svg/delivery-van.svg" alt="" class="m-auto">
                 </div>
                 <div>
                     <h2 class="font-bold">Free shipping</h2>
@@ -22,7 +22,7 @@
             </div>
             <div class="grid grid-cols-2 border-solid border-2 border-[#ec5959] rounded-lg px-[30px] py-[10px]">
                 <div>
-                    <img src="https://FAHASA.rslahmed.com/assets/images/svg/money-back.svg" alt="" class="m-auto">
+                    <img src="https://rafcart.rslahmed.com/assets/images/svg/money-back.svg" alt="" class="m-auto">
                 </div>
                 <div>
                     <h2 class="font-bold">Money Returns</h2>
@@ -31,7 +31,7 @@
             </div>
             <div class="grid grid-cols-2 border-solid border-2 border-[#ec5959] rounded-lg px-[30px] py-[10px]">
                 <div>
-                    <img src="https://FAHASA.rslahmed.com/assets/images/svg/service-hours.svg" alt="" class="m-auto">
+                    <img src="https://rafcart.rslahmed.com/assets/images/svg/service-hours.svg" alt="" class="m-auto">
                 </div>
                 <div>
                     <h2 class="font-bold">24/7 Support</h2>
@@ -47,7 +47,7 @@
 
         <div>
             <div class="banner2 my-[30px]">
-                <img src="https://newshop.vn/public/uploads/options/tusachlamchame.jpg" alt="" width="100%">
+                <img src="https://cdn0.fahasa.com/media/magentothem/banner7/FAHASA840x320.png" alt="" width="100%">
             </div>
         </div>
     </div>
