--- a/src/app/pages/client-pase/signup/signup.component.html
+++ b/src/app/pages/client-pase/signup/signup.component.html
@@ -3,7 +3,7 @@
         <!-- Row -->
         <div class="w-full xl:w-3/4 lg:w-11/12 flex">
             <!-- Col -->
-            <div class="w-full h-auto bg-gray-400 hidden lg:block lg:w-1/2 bg-cover rounded-l-lg" style="background-image: url('https://thongtinz.com/wp-content/uploads/2020/08/hinh-nen-phong-canh-1.jpg')"></div>
+            <div class="w-full h-auto bg-gray-400 hidden lg:block lg:w-1/2 bg-cover rounded-l-lg" style="background-image: url('https://d1j8r0kxyu9tj8.cloudfront.net/images/1547018400LIDcMsIpvQP0Rhn.jpg')"></div>
             <!-- Col -->
             <div class="w-full lg:w-1/2 bg-white p-5 rounded-lg lg:rounded-l-none">
                 <a routerLink="/auth/signin">
