--- a/src/app/components/client-pages/header/header.component.html
+++ b/src/app/components/client-pages/header/header.component.html
@@ -9,8 +9,8 @@
             <li><a class="px-[20px]" routerLink="">TRANG CHỦ</a></li>
             <li><a class="px-[20px]" routerLink="/product">SẢN PHẨM</a></li>
             <li><a class="px-[20px]" routerLink="/posts">BÀI VIẾT</a></li>
-            <li><a class="px-[20px]" routerLink="#">GIỚI THIỆU</a></li>
-            <li><a class="px-[20px]" routerLink="#">LIÊN HỆ</a></li>
+            <li><a class="px-[20px]" routerLink="/info">GIỚI THIỆU</a></li>
+            <li><a class="px-[20px]" routerLink="/contact">LIÊN HỆ</a></li>
 
         </ul>
     </div>
