--- a/src/app/pages/admin/admin-users/admin-user-form/admin-user-form.component.html
+++ b/src/app/pages/admin/admin-users/admin-user-form/admin-user-form.component.html
@@ -46,12 +46,12 @@
                                             <app-show-validate [field]="userForm.get('email')" key="Tiêu đề" class="text-[15px]"></app-show-validate>
                                         </div>
 
-                                        <div class=" col-span-6 sm:col-span-4 py-[30px] ">
+                                        <!-- <div class=" col-span-6 sm:col-span-4 py-[30px] ">
                                             <label class="block text-sm font-medium text-gray-700 ">Password</label>
                                             <input type="password " class="form-control " id="" formControlName="password" placeholder="">
 
                                             <app-show-validate [field]="userForm.get('password')" key="Tiêu đề" class="text-[15px]"></app-show-validate>
-                                        </div>
+                                        </div> -->
                                         <select class="form-select " aria-label="Default select example " formControlName="role">
                                                  
                                                             <option selected  value="0" >0</option>
