--- a/src/app/pages/admin/admin-posts/admin-post-form/admin-post-form.component.html
+++ b/src/app/pages/admin/admin-posts/admin-post-form/admin-post-form.component.html
@@ -5,7 +5,7 @@
                 <div class="lg:flex lg:items-center lg:justify-between">
                     <div class="flex-1 min-w-0 ">
                         <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate mt-[30px] ">
-                            Them San Pham
+                            Them bai viet
                         </h2>
                         <div class="mt-1 flex flex-col sm:flex-row sm:flex-wrap sm:mt-0 sm:space-x-6">
                             <div class="mt-2 flex items-center text-sm text-gray-500">
@@ -56,30 +56,7 @@
 
                                         </div>
 
-                                        <div>
-                                            <label class="block text-sm font-medium text-gray-700 ">
-                                                            Cover photo
-                                                        </label>
-                                            <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md ">
-                                                <div class="space-y-1 text-center ">
-                                                    <svg class="mx-auto h-12 w-12 text-gray-400 " stroke="currentColor " fill="none " viewBox="0 0 48 48 " aria-hidden="true ">
-                                                                    <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12
-                                        4h.02 " strokeWidth={2} strokeLinecap="round " strokeLinejoin="round " />
-                                                                </svg>
-                                                    <div class="flex text-sm text-gray-600 ">
-                                                        <label htmlFor="file-upload " class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2
-                                        focus-within:ring-indigo-500 ">
 
-                                                                        <input type="file" class="form-control " />
-                                                                    </label>
-
-                                                    </div>
-                                                    <p class="text-xs text-gray-500 ">
-                                                        PNG, JPG, GIF up to 10MB
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
 
                                         <button type="button " class="btn btn-success ml-[20px] my-[30px] px-[30px] bg-[#198754] " [disabled]="!postForm.valid">Submit</button>
                                     </form>
